# PuzzleSolvingRobot

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
install/puzzle_solver/lib/puzzle_solver/: puzzle_solver_node
install/puzzle_solver/share/puzzle_solver/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/puzzle_solver/share/puzzle_solver/cmake/: puzzle_solverConfig.cmake
install/puzzle_tuner/share/puzzle_tuner/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/scara_controller/share/scara_controller/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/scara_controller/share/scara_controller/cmake/: scara_controllerConfig.cmake
install/scara_controller/share/scara_controller/config/: scara_controllers.yaml
install/scara_description/share/scara_description/: local_setup.sh  package.sh  package.xml
install/scara_description/share/scara_description/cmake/: scara_descriptionConfig.cmake
install/scara_description/share/scara_description/launch/: display.launch.py  gazebo.launch.py
install/scara_description/share/scara_description/urdf/: scara_ros2_control.xacro
install/scara_moveit/share/scara_moveit/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/scara_moveit/share/scara_moveit/config/: initial_positions.yaml  moveit_controllers.yaml  scara.srdf
install/scara_moveit/share/scara_moveit/launch/: moveit.launch.py
install/scara_msgs/share/scara_msgs/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/scara_msgs/share/scara_msgs/action/: ScaraTask.json
install/scara_msgs/share/scara_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  export_scara_msgs__rosidl_generator_cExport-noconfig.cmake  export_scara_msgs__rosidl_generator_cExport.cmake  export_scara_msgs__rosidl_generator_cppExport.cmake  export_scara_msgs__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_scara_msgs__rosidl_typesupport_fastrtps_cExport.cmake  export_scara_msgs__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_scara_msgs__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  scara_msgsConfig.cmake  scara_msgs__rosidl_typesupport_cExport-noconfig.cmake  scara_msgs__rosidl_typesupport_cExport.cmake  scara_msgs__rosidl_typesupport_cppExport.cmake  scara_msgs__rosidl_typesupport_introspection_cExport.cmake  (+1 more)
install/scara_utils/lib/scara_utils/: angle_conversion
install/scara_utils/share/scara_utils/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/: configFile
src/camera_handler/: CMakeLists.txt  package.xml
src/camera_handler/src/: camera_node.cpp
src/puzzle_solver/: CMakeLists.txt  package.xml
src/puzzle_solver/include/: puzzle_matching.h  puzzle_processing.h  scara_positions.h
src/puzzle_solver/include/puzzle_solver/: puzzle_matching.h  puzzle_processing.h  puzzle_utils.h  scara_positions.h
src/puzzle_solver/launch/: solver.launch.py
src/puzzle_solver/src/: puzzle_matching.cpp  puzzle_processing.cpp  puzzle_solver_node.cpp  puzzle_utils.cpp  scara_positions.cpp
src/puzzle_tuner/: CMakeLists.txt  package.xml
src/puzzle_tuner/config/: solver_config.txt
src/puzzle_tuner/launch/: tuner.launch.py
src/puzzle_tuner/src/: tuner.cpp  tuner_node.cpp
src/scara_bringup/: CMakeLists.txt  package.xml
src/scara_bringup/launch/: real_robot.launch.py  simulated_robot.launch.py  test_real_robot.launch.py
src/scara_controller/: CMakeLists.txt  package.xml  scara_controller.xml
src/scara_controller/config/: scara_controllers.yaml
src/scara_controller/include/: scara_interface.hpp
src/scara_controller/include/scara_controller/: scara_interface.hpp
src/scara_controller/launch/: controller.launch.py
src/scara_controller/src/: scara_interface.cpp
src/scara_description/: CMakeLists.txt
src/scara_description/launch/: display.launch.py  gazebo.launch.py
src/scara_description/meshes/: CAMERA_BASE.stl  FOREARM.stl  MY_ARM_BOTTOM.stl  MY_ARM_TOP.stl  MY_GRIPPER_GEAR.stl  RPI_CAM.stl
src/scara_description/rviz/: display.rviz
src/scara_description/urdf/: scara.urdf.xacro  scara_gazebo.xacro  scara_ros2_control.xacro
src/scara_firmware/: CMakeLists.txt  package.xml
src/scara_firmware/firmware/arduino_scara_controll/: platformio.ini
src/scara_firmware/firmware/arduino_scara_controll/lib/AccelStepper/: AccelStepper.cpp  AccelStepper.h  MANIFEST  Makefile
src/scara_firmware/firmware/arduino_scara_controll/lib/AccelStepper/doc/: annotated.html  classAccelStepper-members.html  classAccelStepper.html  files.html  functions.html  functions_func.html  index.html
src/scara_firmware/firmware/arduino_scara_controll/src/: main.cpp
src/scara_firmware/src/: serial_transmitter_node.cpp
src/scara_iksolver/: CMakeLists.txt  package.xml
src/scara_iksolver/launch/: ik_solver.launch.py
src/scara_iksolver/src/: scara_ik_node.cpp
src/scara_kinematics/: CMakeLists.txt  package.xml
src/scara_kinematics/config/: initial_positions.yaml
src/scara_kinematics/launch/: scara_kinematics.launch.py
src/scara_kinematics/src/: scara_kinematics_node.cpp
src/scara_moveit/: CMakeLists.txt  package.xml
src/scara_moveit/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  scara.srdf
src/scara_moveit/launch/: moveit.launch.py
src/scara_msgs/: CMakeLists.txt  package.xml
src/scara_msgs/action/: ScaraTask.action
src/scara_msgs/msg/: EffectorPose.msg  PiecePose.msg  PuzzleAssembly.msg
src/scara_server/: CMakeLists.txt  package.xml
src/scara_server/launch/: scara_server.launch.py
src/scara_server/src/: puzzle_task_server.cpp  task_server_node.cpp
src/scara_utils/: CMakeLists.txt  package.xml
src/scara_utils/src/: angle_conversion.cpp
(+31 files in other folders)
