cmake_minimum_required(VERSION 3.8)
project(scara_firmware)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(std_msgs REQUIRED)
find_package(PkgConfig REQUIRED)

pkg_check_modules(SERIAL libserial)

add_executable(serial_transmitter_node 
  src/serial_transmitter_node.cpp)

ament_target_dependencies(serial_transmitter_node 
  rclcpp
  std_msgs
)

target_include_directories(serial_transmitter_node 
  PUBLIC
    "${SERIAL_INCLUDE_DIRS}")

target_link_libraries(serial_transmitter_node 
  "${SERIAL_LIBRARIES}"
)

install (TARGETS
  serial_transmitter_node
  #ARCHIVE DESTINATION lib
  LIBRARY DESTINATION lib
  RUNTIME DESTINATION bin
  DESTINATION lib/${PROJECT_NAME}
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  set(ament_cmake_copyright_FOUND TRUE)
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
