<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>scara_iksolver</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="wryn903@gmail.com">wojciech</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>urdf</depend>
  <depend>kdl_parser</depend>
  <depend>orocos_kdl</depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>scara_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
